# rust-shaku-practice

./: README.md
rust-shaku-practice/: Cargo.toml
rust-shaku-practice/src/: main.rs
rust-shaku-practice2/: Cargo.toml
rust-shaku-practice2/src/: main.rs
rust-shaku-practice3/: Cargo.toml
rust-shaku-practice3/src/: main.rs
rust-shaku-practice4/: Cargo.toml
rust-shaku-practice4/src/: main.rs
rust-shaku-practice5/: Cargo.toml
rust-shaku-practice5/src/: main.rs
rust-shaku-practice6/: Cargo.toml
rust-shaku-practice6/src/: main.rs
rust-shaku-practice7/: Cargo.toml
rust-shaku-practice7/src/: main.rs
rust-shaku-practice8/: Cargo.toml
rust-shaku-practice8/src/: main.rs
rust-shaku-practice9/: Cargo.toml
rust-shaku-practice9/src/: main.rs
