[package]
name = "rust-shaku-practice9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
axum = { version = "0.8.3",  features = ["multipart"] }
shaku = "0.6.2"
axum-macros = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"